# mcp-server

./: client.py  pyproject.toml  run_sse.py  run_stdio.py  server.py  sse.py  stdio.py  test.txt
